Wed Dec  2 23:55:38 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:

          Fixed VC9 errors introduced by merge.

Wed Dec  2 23:32:05 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/diagrams/class.dia:
        * docs/html/multicast/images/class.png:

          Updated multicast class diagram.

Wed Dec  2 22:41:22 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataSampleHeader.cpp:

          operator<<()
            - forced submessage_id to be interpreted as an integer type
              when inserting onto a std::ostream.  This corrects a
              problem where the log messages were truncated at the
              submessage_id.

Wed Dec  2 22:00:04 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * docs/html/federation:

          Updated federation HTML documentation to match new template.

Wed Dec  2 21:41:50 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multicast/index.html:

          Finalized multicast transport design documentation.

Wed Dec  2 20:57:43 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:
        * tools/odds_monitor/MonitorDataStorage.h:
        * tools/odds_monitor/MonitorDataStorage.cpp:
        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/MonitorTask.h:
        * tools/odds_monitor/MonitorTask.cpp:

          Refactored processing and applyed method templates to reduce
          the total code volume.  Changed to forward updates from the
          task to the storage object to let it mediate the updates with
          the GUI.  Stubbed the updates in the MonitorDataStorage.inl
          file.

Wed Dec  2 19:03:41 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:
